# opper-webagent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  service.py  setup.py
.github/workflows/: build.yaml
browser_data/: _storage.json  storage.json  storage.json___  storage__.json
examples/: service.py
examples/cli/: app.py
examples/console_interface/: README.md  app.py  requirements.txt
examples/multi/: app.py
examples/rest/: README.md  app.py  requirements.txt
examples/rest/templates/: index.html
examples/web/: app.py
examples/web/templates/: index.html
examples/web_interface/: app.py
examples/web_interface/templates/: index.html
src/opper/: __init__.py
src/opper/webagent/ai/: decide.py  response.py  vision.py
src/opper/webagent/browser/: click.py  interaction.py  screenshot.py  setup.py
src/opper_webagent/: __init__.py  main.py  status.py
src/opper_webagent/ai/: __init__.py  parse.py  reflect.py
src/opper_webagent/browser/: __init__.py  setup.py
src/opper_webagent/models/: __init__.py  schemas.py
src/web_agent/: __init__.py  main.py  status.py
src/web_agent/ai/: __init__.py  coordinator.py  observe.py  parse.py  reflect.py  vision.py
src/web_agent/browser/: __init__.py  click.py  interaction.py  navigate.py  screenshot.py  scroll.py  setup.py  type.py
src/web_agent/models/: __init__.py  schemas.py
templates/: index.html
