[project]
name = "opper_webagent"
version = "0.1.0"
description = "A scriptable compound AI web agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Opper AI", email = "hello@opper.ai"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "playwright>=1.39.0",
    "rich>=13.0.0",
    "opperai>=0.26.2",
    "pillow>=11.1.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "aiohttp>=3.11.12",
]

[project.urls]
Homepage = "https://github.com/opperai/opperator"
Repository = "https://github.com/opperai/opperator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
